--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "tuki0918/totoro",
     "license": "MIT",
     "require": {
-        "abraham/twitteroauth": "^0.6.4"
+        "abraham/twitteroauth": "^0.6.4",
+        "vlucas/phpdotenv": "^2.2"
     },
     "autoload": {
         "psr-4": {
