--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Totoro\\": "src/"
+            "Totoro\\General\\": "src/"
         }
     }
 }
