--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "tuki0918/totoro",
     "license": "MIT",
     "require": {
-        "abraham/twitteroauth": "^0.6.4",
-        "vlucas/phpdotenv": "^2.2"
+        "abraham/twitteroauth": "^0.6.4"
     },
     "autoload": {
         "psr-4": {
