--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
         "psr-4": {
             "Totoro\\General\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.3",
+        "satooshi/php-coveralls": "^1.0",
+        "phpunit/php-code-coverage": "^3.3"
     }
 }
