--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require-dev": {
         "phpunit/phpunit": "^5.3",
         "satooshi/php-coveralls": "^1.0",
-        "phpunit/php-code-coverage": "^3.3"
+        "phpunit/php-code-coverage": "^3.3",
+        "fabpot/php-cs-fixer": "^1.11"
     }
 }
