--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,22 @@
 language: php
 
+sudo: false
+
 php:
   - 7.0
 
-before_script:
+before_install:
   - composer self-update
-  - composer install --prefer-source --no-interaction --dev
+
+install:
+  - composer install --prefer-dist --no-interaction --dev
+
+before_script:
+  - mkdir -p build/logs
 
 script:
-  - mkdir -m 777 -p build/logs
   - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+  - vendor/bin/php-cs-fixer fix -v --dry-run
 
 after_success:
   - php vendor/bin/coveralls -v
